[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/projectile.gd" type="Script" id=1]
[ext_resource path="res://scenes/items/projectiles/arrow.tres" type="ArrayMesh" id=2]
[ext_resource path="res://sounds/swish_2.wav" type="AudioStream" id=3]

[sub_resource type="SphereShape" id=1]

radius = 0.05

[sub_resource type="CapsuleShape" id=2]

radius = 0.05
height = 0.75

[node name="arrow" type="KinematicBody"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 4
collision_mask = 4
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
projectileName = ""
maxDistanceInUnits = 10.0
speedInUnitsPerSecond = 600.001
fallRate = 0.0
damage = 20
damagePastBlade = false

[node name="CollisionShape" type="CollisionShape" parent="." index="0"]

shape = SubResource( 1 )
disabled = false

[node name="MeshInstance" type="MeshInstance" parent="." index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 2 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="Tween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="projectile" type="Area" parent="." index="4"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 2
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Axis Lock", "Collision", "Transform", "collision" ]

[node name="CollisionShape" type="CollisionShape" parent="projectile" index="0"]

shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]

[connection signal="body_entered" from="projectile" to="." method="_on_projectile_body_entered"]


