[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/projectile.gd" type="Script" id=1]
[ext_resource path="res://scenes/items/pickups/potion/potion.tres" type="ArrayMesh" id=2]
[ext_resource path="res://sounds/swish_2.wav" type="AudioStream" id=3]

[sub_resource type="SphereShape" id=1]
radius = 0.13

[sub_resource type="SphereShape" id=2]
radius = 0.2

[sub_resource type="SphereShape" id=3]
radius = 8.0

[node name="potion_projectile" type="KinematicBody"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )
projectileName = "potion"
maxDistanceInUnits = 5.0
speedInUnitsPerSecond = 600.001
fallRate = 5.0
damage = 100
damagePastBlade = false

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.03, 0 )
mesh = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="projectile" type="Area" parent="."]
collision_layer = 2
collision_mask = 2
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="projectile"]
shape = SubResource( 2 )

[node name="potionCollision" type="Area" parent="."]
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="potionCollision"]
shape = SubResource( 3 )

[connection signal="body_entered" from="projectile" to="." method="_on_projectile_body_entered"]
